--- a/index.html
+++ b/index.html
@@ -1,7 +1,29 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Hello World</title>
+<title>Four Seasons</title>
 <link rel="stylesheet" href="style.css">
 <script src="app.js"></script>
 
-<h1>Hello World</h1>
+<header>
+    <h1>Four Seasons</h1>
+</header>
+
+<section id="spring">
+
+</section>
+
+<section id="summer">
+
+</section>
+
+<section id="autumn">
+
+</section>
+
+<section id="winter">
+
+</section>
+
+<footer>
+
+</footer>
