--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 <script src="app.js"></script>
 
 <header>
+    <div id="orbit">
+        <div id="sun">
+            <div id="earth">
+                <div id="moon"></div>
+            </div>
+        </div>
+    </div>
     <h1>Four Seasons</h1>
 </header>
 
@@ -25,5 +32,10 @@
 </section>
 
 <footer>
-
+    <ul>
+        <li><a href><img src="media/icon-facebook.svg"></a></li>
+        <li><a href><img src="media/icon-youtube.svg"></a></li>
+        <li><a href><img src="media/icon-instagram.svg"></a></li>
+        <li><a href><img src="media/icon-twitter.svg"></a></li>
+    </ul>
 </footer>
