--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Four Seasons</title>
 <link rel="stylesheet" href="style.css">
-<script src="app.js"></script>
+<script src="app.js" defer></script>
 
 <header>
     <div id="orbit">
@@ -16,19 +16,31 @@
 </header>
 
 <section id="spring">
-
+    <article>
+        <h2>Spring</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In ex alias voluptas culpa commodi repudiandae. Illo quis quibusdam nam assumenda aliquid sed ex fugiat. Modi, ullam quod accusamus, maiores molestiae dolor, dignissimos facere autem quo illum quia accusantium sunt enim doloribus deleniti hic! Sunt autem officia ullam aliquam delectus doloribus provident vero odit officiis odio tempore architecto, sint aspernatur voluptates!</p>
+    </article>
 </section>
 
 <section id="summer">
-
+    <article>
+        <h2>Summer</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia necessitatibus, deleniti ullam repudiandae voluptatum quae corrupti soluta adipisci excepturi. Amet, accusamus numquam dolor incidunt facere quis saepe autem tempore, harum accusantium quisquam aspernatur provident minus perferendis placeat quaerat rem animi explicabo temporibus consectetur dolorum ullam! Debitis assumenda molestiae voluptates dignissimos!</p>
+    </article>
 </section>
 
 <section id="autumn">
-
+    <article>
+        <h2>Autumn</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus voluptate iusto, magnam quas aut delectus repellat voluptas eius vitae nostrum obcaecati, dignissimos ullam repellendus consequatur nisi quae quaerat quasi tempore reiciendis aspernatur enim, alias ipsam quos. Temporibus sapiente eveniet fuga aliquam delectus atque placeat distinctio. Laboriosam eum earum quis odio impedit, nostrum maiores architecto vitae possimus dolor explicabo?</p>
+    </article>
 </section>
 
 <section id="winter">
-
+    <article>
+        <h2>Winter</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis iste voluptate temporibus, recusandae modi saepe dolores quod aliquam minima dolor assumenda quisquam nam ipsa repellendus obcaecati quae vitae eos? Quas laboriosam praesentium beatae illo eaque ad cumque officia rerum veritatis, accusamus doloremque aperiam ea incidunt nostrum corporis voluptatem, quam inventore ab voluptatum eos commodi ipsam. Amet voluptas cumque architecto impedit!</p>
+    </article>
 </section>
 
 <footer>
